--- a/TestPOM/test-output/emailable-report.html
+++ b/TestPOM/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">30,253</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,254</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.hrm.qa.testdata.LoginPageTest</td><td><a href="#m0">loginPageTitleTest</a></td><td rowspan="1">1645683706397</td><td rowspan="1">29</td></tr><tr class="passedeven"><td><a href="#m1">loginTest</a></td><td rowspan="1">1645683719914</td><td rowspan="1">4733</td></tr><tr class="passedeven"><td><a href="#m2">siteLogo</a></td><td rowspan="1">1645683712066</td><td rowspan="1">50</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.hrm.qa.testcases.HomePageTest</td><td><a href="#m0">clickAdminTest</a></td><td rowspan="1">1645705024750</td><td rowspan="1">2489</td></tr><tr class="passedeven"><td><a href="#m1">clickMyInfoTest</a></td><td rowspan="1">1645705037854</td><td rowspan="1">2014</td></tr><tr class="passedeven"><td><a href="#m2">verifyLoginTest</a></td><td rowspan="1">1645705013369</td><td rowspan="1">69</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.hrm.qa.testdata.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.hrm.qa.testdata.LoginPageTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.hrm.qa.testdata.LoginPageTest#siteLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.hrm.qa.testcases.HomePageTest#clickAdminTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.hrm.qa.testcases.HomePageTest#clickMyInfoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.hrm.qa.testcases.HomePageTest#verifyLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
