--- a/TestPOM/test-output/index.html
+++ b/TestPOM/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Asus\AppData\Local\Temp\testng-eclipse--1931550100\testng-customsuite.xml</span>
+                    <span>C:\Users\Asus\AppData\Local\Temp\testng-eclipse-1895112225\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testdata.LoginPageTest" class="method navigator-link" hash-for-method="loginPageTitleTest">loginPageTitleTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testcases.HomePageTest" class="method navigator-link" hash-for-method="clickAdminTest">clickAdminTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testdata.LoginPageTest" class="method navigator-link" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testcases.HomePageTest" class="method navigator-link" hash-for-method="clickMyInfoTest">clickMyInfoTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testdata.LoginPageTest" class="method navigator-link" hash-for-method="siteLogo">siteLogo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.hrm.qa.testcases.HomePageTest" class="method navigator-link" hash-for-method="verifyLoginTest">verifyLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +132,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.hrm.qa.testdata.LoginPageTest</span>
+              <span class="class-name">com.hrm.qa.testcases.HomePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginPageTitleTest">
-                  </a> <!-- loginPageTitleTest -->
-                  <span class="method-name">loginPageTitleTest</span>
+                  <a name="clickAdminTest">
+                  </a> <!-- clickAdminTest -->
+                  <span class="method-name">clickAdminTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
+                  <a name="clickMyInfoTest">
+                  </a> <!-- clickMyInfoTest -->
+                  <span class="method-name">clickMyInfoTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="siteLogo">
-                  </a> <!-- siteLogo -->
-                  <span class="method-name">siteLogo</span>
+                  <a name="verifyLoginTest">
+                  </a> <!-- verifyLoginTest -->
+                  <span class="method-name">verifyLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Asus\AppData\Local\Temp\testng-eclipse--1931550100\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Asus\AppData\Local\Temp\testng-eclipse-1895112225\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +170,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.hrm.qa.testdata.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.hrm.qa.testcases.HomePageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,17 +212,17 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'com.hrm.qa.testdata.LoginPageTest')
-data.setCell(0, 3, 4733);
+data.setCell(0, 1, 'clickAdminTest')
+data.setCell(0, 2, 'com.hrm.qa.testcases.HomePageTest')
+data.setCell(0, 3, 2489);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'siteLogo')
-data.setCell(1, 2, 'com.hrm.qa.testdata.LoginPageTest')
-data.setCell(1, 3, 50);
+data.setCell(1, 1, 'clickMyInfoTest')
+data.setCell(1, 2, 'com.hrm.qa.testcases.HomePageTest')
+data.setCell(1, 3, 2014);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginPageTitleTest')
-data.setCell(2, 2, 'com.hrm.qa.testdata.LoginPageTest')
-data.setCell(2, 3, 29);
+data.setCell(2, 1, 'verifyLoginTest')
+data.setCell(2, 2, 'com.hrm.qa.testcases.HomePageTest')
+data.setCell(2, 3, 69);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -253,42 +253,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.hrm.qa.testdata.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.hrm.qa.testcases.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginPageTitleTest</span>
-                <span class="method-start">11722 ms</span>
+                <span class="method-name">verifyLoginTest</span>
+                <span class="method-start">12470 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11756 ms</span>
+                <span class="method-start">12547 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">12018 ms</span>
+                <span class="method-start">12810 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">siteLogo</span>
-                <span class="method-start">17391 ms</span>
+                <span class="method-name">clickAdminTest</span>
+                <span class="method-start">23851 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17443 ms</span>
+                <span class="method-start">26343 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">17673 ms</span>
+                <span class="method-start">26593 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">25239 ms</span>
+                <span class="method-name">clickMyInfoTest</span>
+                <span class="method-start">36955 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">29975 ms</span>
+                <span class="method-start">38972 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
