--- a/TestPOM/test-output/old/Default suite/methods.html
+++ b/TestPOM/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:52:04</td>   <td>12302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:52:04</td>   <td>12302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:52</td>   <td>-282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.siteLogo()[pri:2, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">siteLogo</td> 
-  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:59</td>   <td>7566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">loginTest</td> 
-  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:52:04</td>   <td>12302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1912821769</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>22/02/24 11:51:46</td>   <td>-5951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.hrm.qa.testdata.LoginPageTest@543588e6]">loginPageTitleTest</td> 
-  <td>main@1912821769</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:17</td>   <td>-2018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickMyInfoTest()[pri:3, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">clickMyInfoTest</td> 
+  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:04</td>   <td>-15122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickAdminTest()[pri:2, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">clickAdminTest</td> 
+  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:46:53</td>   <td>-26503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyLoginTest()[pri:1, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">verifyLoginTest</td> 
+  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:07</td>   <td>-12380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:07</td>   <td>-12380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:07</td>   <td>-12380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="7e8a9e">  <td>22/02/24 17:47:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.hrm.qa.testcases.HomePageTest@f5acb9d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
 </table>
